<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hsuweien.drawsignalline_06v4.ori_dataActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ori_readfile"
                android:layout_marginStart="5sp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ori_edtxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/ori_edtxt1"
                android:text="@string/ori_edtxt1_text"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samplerate"
                android:layout_marginStart="5sp"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/ori_edtxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/ori_edtxt2"
                android:text="@string/ori_edtxt2_text"
                 />
        </TableRow>

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ori_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_OK" />

            <Button
                android:id="@+id/ori_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </TableRow>


</android.widget.LinearLayout>
