<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hsuweien.drawsignalline_06v4.fftActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fft_length"
                android:textSize="20dp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/fft_edtxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edtxt2_text"
                android:textSize="20dp"/>
        </TableRow>

    </TableLayout>



    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/fft_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_OK" />

            <Button
                android:id="@+id/fft_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

        </LinearLayout>

    </TableRow>



</android.widget.LinearLayout>
